[gd_scene load_steps=12 format=3 uid="uid://bpm40kcqmyhmd"]

[ext_resource type="Script" path="res://entities/jumpy-bat/jumpy_bat.gd" id="1_gse4f"]
[ext_resource type="Texture2D" uid="uid://biu2ki6j3a5qi" path="res://entities/jumpy-bat/Bat 32x32.png" id="2_kt3oh"]

[sub_resource type="AtlasTexture" id="AtlasTexture_8qnlj"]
atlas = ExtResource("2_kt3oh")
region = Rect2(128, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fgp4m"]
atlas = ExtResource("2_kt3oh")
region = Rect2(160, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ydpw"]
atlas = ExtResource("2_kt3oh")
region = Rect2(192, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hrg35"]
atlas = ExtResource("2_kt3oh")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ny5wf"]
atlas = ExtResource("2_kt3oh")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jvkr6"]
atlas = ExtResource("2_kt3oh")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_eapqr"]
atlas = ExtResource("2_kt3oh")
region = Rect2(96, 32, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_ikxx2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8qnlj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fgp4m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ydpw")
}],
"loop": true,
"name": &"hit",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hrg35")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ny5wf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jvkr6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eapqr")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ok0ls"]
size = Vector2(12, 8)

[node name="JumpyBat" type="Area2D"]
script = ExtResource("1_gse4f")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_ikxx2")
animation = &"idle"
frame_progress = 0.550387

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -1)
shape = SubResource("RectangleShape2D_ok0ls")

[connection signal="area_shape_entered" from="." to="." method="_on_area_shape_entered"]
[connection signal="body_shape_entered" from="." to="." method="_on_body_shape_entered"]
